--- a/app/views/mentor_profiles/read.html.erb
+++ b/app/views/mentor_profiles/read.html.erb
@@ -25,7 +25,7 @@ padding-left: 0px;
 <tr><td>Major:</td><td>Software Engineer</td></tr>
 </table>
 </td></tr>
-<tr><td>Location:</td><td>Cincinnati</td></tr>
+<tr><td>Location:</td><td>Chicago</td></tr>
 <tr><td>Preferred Contact Method:</td><td>E-mail</td></tr>
 <tr><td>Current Position:</td><td>Software Engineer</td></tr>
 <tr><td>Past Positions:</td><td><ul><li>Software Engineer</li><li>IT Intern</li></ul></td><td rowspan="4">
