--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -3,7 +3,7 @@
 <% form_for :user, :url => {:action => 'login'} do |f| %>
 <table style="width: 300px">
 	<tr>
-		<td><%= f.label :name, "E-mail:" %></td>
+		<td><%= f.label :email, "E-mail:" %></td>
 		<td><%= f.text_field :email %></td>
 	</tr>
 	<tr>
@@ -14,6 +14,5 @@
 <p><%= submit_tag "Login" %></p>
 <% end %>
 <p><a href="/accounts/register">Register</a> <a href="/accounts/forgot">Forgot Password</a></p>
-</form>
 
 
