--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   <li><a href="/mentor_profiles/read">My Profile</a></li>
   <li><a href="/mentor_profiles/update_general">Edit Profile</a></li>
   <li><a href="/mentor_profiles/update_availability">Update Availability</a></li>
+  <li><a href="/requests/view">Mentorship Requests</a></li>
   <% end %>
   <% if session[:usertype] == :mentee %>
   <li><a href="/mentee_profiles/read">My Profile</a></li>
