--- a/app/views/mentee_profiles/update_general.html.erb
+++ b/app/views/mentee_profiles/update_general.html.erb
@@ -1,6 +1,19 @@
-<h1>Update John Smith's Profile</h1>
- 
-<div id="tab1content" class="tabcontent">
+<h1>
+  <%
+  if request.referer.include? "register"
+    %>Create <%
+  else
+    %>Update <%
+  end
+  %> Jane Doe's Profile</h1>
+<div style="color:red;">
+  <%= flash[:status] %>
+</div>
+ <ul class="tabs">  
+  <li id="tab1button">General Information</li>  
+  <li id="tab2button">Software Experience</li>  
+  <li id="tab3button">Interests</li>  
+</ul> 
 <style type="text/css">
 .tabcontent td {
 padding:7px 0px;
@@ -12,9 +25,10 @@ padding-left: 0px;
 padding-left: 0px; 
 }
 </style>
-<form>
+<% form_for :mentee, :url => {:action => 'update_general'} do |f| %>
+<div id="tab1content">
 <table style="width:700px;">
-<tr><td>Name:</td><td><input type="text" value="John Smith" /></td>
+<tr><td>Name:</td><td><%= f.text_field :name %></td>
 <td rowspan="4">
 <table>
 <tr><td colspan="2"><Strong>Education</strong></td></tr>
@@ -28,7 +42,6 @@ padding-left: 0px;
 <tr><td>Recent Projects (One per line)</td><td><textarea style="width: 300px">Medical Billing Databases  
 Sliding Blocks Solution Generator</textarea></td></tr>
 </table>
-<<<<<<< HEAD
 </div>
 
 <div id="tab2content">
@@ -88,11 +101,10 @@ golf
     });
     </script>
 <p></p>
-<input type="button" value="Submit Changes" />
+<%= submit_tag("Submit Changes") %>
 
-
-</form>
-=======
-<input type="button" name="next_button" value="Next"></input>
+<% end %>
 </div>  
->>>>>>> 5f248a32053c210e791c81bb1462a77d6aab4e05
+
+
+<p><a href="/mentee_profiles/delete">Delete Profile</a></p>
