--- a/app/views/requests/make.html.erb
+++ b/app/views/requests/make.html.erb
@@ -1,9 +1,10 @@
 <h1>Request Mentorship from John Smith</h1>
-<form>
+<% form_for :request, :url => {:action => 'make'} do |f| %>
 <table>
-<tr><td>Why John Smith?</td><td><textarea></textarea></td></tr>
+<tr><td>Why John Smith?</td><td><%= f.text_area :reason %></td></tr>
 <tr><td>When do you want this mentorship to start,<br />and how long do you think it might last?</td><td><textarea></textarea></td></tr>
-<tr><td colspan="2"><input type="button" value="Submit" /></td></tr>
+<tr><td colspan="2">
+<%= submit_tag "Login" %>
+</td></tr>
 </table>
-</form>
-
+<% end %>
