--- a/app/views/requests/view.html.erb
+++ b/app/views/requests/view.html.erb
@@ -1,6 +1,7 @@
 <h1>View Mentorship Requests</h1>
+
 <form>
-<div>
+<div id="accept">
 <h3>John Smith</h3>
 <p>Reason: I want to create an alternative rock playlist generator using Ruby which I have little experience using.</p>
 <p>Timeframe: One month long project starting on Oct 18 2010</p>
@@ -13,3 +14,13 @@
 <input type="button" value="Accept" /><input type="button" value="Reject" />
 </div>
 </form>
+<script type="text/javascript">
+  $('accept').childElements().each(function (e) {
+    e.observe('click',function (e) {
+        window.location="/"
+      }
+      );
+    });
+  
+</script>
+
