--- a/app/views/mentor_profiles/search.html.erb
+++ b/app/views/mentor_profiles/search.html.erb
@@ -40,7 +40,7 @@ color: white;
 </div>
 <table>
 <tr><th><a href="#">Location <img src="/images/down.png" alt="" /></a></th><th><a href="#">Technologies</a></th><th><a href="#">Preferred contact method</a></th><th><a href="#">Years Experience</a></th></tr>
-<tr><td><a href="#">Cincinnati</a></td><td><a href="#">C, Ruby</a></td><td><a href="#">Email</a></td><td><a href="#">5</a></td>
-<tr><td><a href="#">Indianapolis</a></td><td><a href="#">C#, Ruby</a></td><td><a href="#">Phone</a></td><td><a href="#">4</a></td>
+<tr><td><a href="/mentor_profiles/read">Cincinnati</a></td><td><a href="/mentor_profiles/read">C, Ruby</a></td><td><a href="/mentor_profiles/read">Email</a></td><td><a href="/mentor_profiles/read">5</a></td>
+<tr><td><a href="/mentor_profiles/read">Indianapolis</a></td><td><a href="/mentor_profiles/read">C#, Ruby</a></td><td><a href="/mentor_profiles/read">Phone</a></td><td><a href="/mentor_profiles/read">4</a></td>
 </table>
 
