--- a/app/views/requests/make.html.erb
+++ b/app/views/requests/make.html.erb
@@ -4,7 +4,7 @@
 <tr><td>Why John Smith?</td><td><%= f.text_area :reason %></td></tr>
 <tr><td>When do you want this mentorship to start,<br />and how long do you think it might last?</td><td><textarea></textarea></td></tr>
 <tr><td colspan="2">
-<%= submit_tag "Login" %>
+<%= submit_tag "Submit" %>
 </td></tr>
 </table>
 <% end %>
