--- a/app/views/requests/view.html.erb
+++ b/app/views/requests/view.html.erb
@@ -1,7 +1,8 @@
 <h1>View Mentorship Requests</h1>
 
 <form>
-<div id="accept">
+  <div id="accept">
+<div>
 <h3>John Smith</h3>
 <p>Reason: I want to create an alternative rock playlist generator using Ruby which I have little experience using.</p>
 <p>Timeframe: One month long project starting on Oct 18 2010</p>
@@ -15,7 +16,8 @@
 </div>
 </form>
 <script type="text/javascript">
-  $('accept').childElements().each(function (e) {
+  $$('input').each(function (e) {
+    
     e.observe('click',function (e) {
         window.location="/"
       }
@@ -23,4 +25,4 @@
     });
   
 </script>
-
+</div>
