--- a/app/views/mentor_profiles/update_availability.html.erb
+++ b/app/views/mentor_profiles/update_availability.html.erb
@@ -1,5 +1,5 @@
 <h1>Update Availability</h1>
-
+<p>Set your availability by clicking days or "Week"</p>
 <ul><li>Red: Unavailable</li><li>Yellow: Moderately Available</li><li>Green: Openly Available</li></ul>
 <TABLE id="CalendarTable">
 <TR>
@@ -86,6 +86,7 @@
 </TR>
 
 </TABLE> 
+<p><input type="submit" value="Save Changes" /></p>
 <style>
 .availRed {
 background-color: red;
