Added a TV show to the mentee profile, to test the development setup.

--- a/app/views/mentee_profiles/read.html.erb
+++ b/app/views/mentee_profiles/read.html.erb
@@ -59,7 +59,7 @@ padding-left: 0px;
 <table>
 
 <tr><td>Specialties/Accomplishments:</td><td>Third degree black belt in karate</td></tr>
-<tr><td>Activities/Interests:</td><td>Karate, spelunking, golf </td></tr>
+<tr><td>Activities/Interests:</td><td>Karate, spelunking, golf, MST3K</td></tr>
 </table>
 </div>  
 
