Added a TV show to the mentor profile, to test the development setup.

--- a/app/views/mentor_profiles/read.html.erb
+++ b/app/views/mentor_profiles/read.html.erb
@@ -71,7 +71,7 @@ padding-left: 0px;
 <tr><td>Specialties/Accomplishments:</td><td>Third degree black belt in karate</td></tr>
 <tr><td>Activities/Interests:</td><td>Karate, spelunking, golf </td></tr>
 <tr><td>Books:</td><td>The Art of War, Watchmen, A Mathematician Reads the Newspaper</td></tr>
-<tr><td>TV Shows:</td><td>Men of a Certain Age, Family Guy, Mythbusters, The Office, Arrested Development,House Hunters</td></tr>
+<tr><td>TV Shows:</td><td>Men of a Certain Age, Family Guy, Mythbusters, The Office, Arrested Development, House Hunters, MST3K</td></tr>
 <tr><td>Music Interests:</td><td>ALternative Rock, Hinder, Red Hot Chili Peppers</td></tr>
 <tr><td>Movies:</td><td>The Boondock Saints, Citizen Kane </td></tr>
 </table>
