--- a/app/views/mentor_profiles/update_nonsw.html.erb
+++ b/app/views/mentor_profiles/update_nonsw.html.erb
@@ -25,6 +25,7 @@ Watchmen
 A Mathematician Reads the Newspaper</textarea></td></tr>
 <tr><td>TV Shows:</td><td><textarea>
 Men of a Certain Age
+Dexter
 Family Guy
 Mythbusters
 The Office</textarea></td></tr>
