--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,31 +1,8 @@
-<p>
-  <b>Name:</b>
-  <%=h @mentor.name %>
-</p>
+<p id="notice"><%= notice %></p>
 
 <p>
-  <b>Location:</b>
-  <%=h @mentor.location %>
-</p>
-
-<p>
-  <b>Current position:</b>
-  <%=h @mentor.current_position %>
-</p>
-
-<p>
-  <b>School:</b>
-  <%=h @mentor.school %>
-</p>
-
-<p>
-  <b>Major:</b>
-  <%=h @mentor.major %>
-</p>
-
-<p>
-  <b>Total years experience:</b>
-  <%=h @mentor.total_years_experience %>
+  <b>User:</b>
+  <%= @mentor.user %>
 </p>
 
 
