--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -1,36 +1,5 @@
 <h1>New mentor</h1>
 
-<% form_for(@mentor) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
-  </p>
-  <p>
-    <%= f.label :current_position %><br />
-    <%= f.text_field :current_position %>
-  </p>
-  <p>
-    <%= f.label :school %><br />
-    <%= f.text_field :school %>
-  </p>
-  <p>
-    <%= f.label :major %><br />
-    <%= f.text_field :major %>
-  </p>
-  <p>
-    <%= f.label :total_years_experience %><br />
-    <%= f.text_field :total_years_experience %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back', mentors_path %>
-
