Added most associations, except for the User-Survey association (clarification needed). Modified some Mentee views for experimentation. There is a bug in Experience: the 'type' field must be renamed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= javascript_include_tag :defaults %>
     <%= stylesheet_link_tag "main" %>
 </head>
+<link rel="icon" href="images/corporate_favicon.ico" type="image/ico" />
 <body>
 <div id="MainBody">
 <div class="navbar">
