--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Menteeid:</b>
-  <%= @mentee.menteeID %>
+  <b>ID:</b>
+  <%= @mentee.id %>
+</p>
+<p>
+  <b>User ID:</b>
+  <%= @mentee.user_id %>
 </p>
 
 
