--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :mentorID %><br />
-    <%= f.text_field :mentorID %>
+    <%= f.label :user_id %><br />
+    <%= f.text_field :user_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
