--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Mentorid</th>
+    <th>User ID</th>
     <th></th>
     <th></th>
     <th></th>
@@ -10,7 +10,7 @@
 
 <% @mentors.each do |mentor| %>
   <tr>
-    <td><%= mentor.mentorID %></td>
+    <td><%= mentor.user_id %></td>
     <td><%= link_to 'Show', mentor %></td>
     <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td>
     <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td>
