--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Mentorid:</b>
-  <%= @mentor.mentorID %>
+  <b>User ID:</b>
+  <%= @mentor.user_id %>
 </p>
 
 
