Associations should be working now. The Experiences type bug remains.

--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>ID</th>
-    <th>User ID</th>
+    <!--<th>Email</th>-->
     <th></th>
     <th></th>
     <th></th>
@@ -12,7 +12,7 @@
 <% @mentees.each do |mentee| %>
   <tr>
     <td><%= mentee.id %></td>
-    <td><%= mentee.user_id %></td>
+    <!--<td><%= mentee.user.email %></td>-->
     <td><%= link_to 'Show', mentee %></td>
     <td><%= link_to 'Edit', edit_mentee_path(mentee) %></td>
     <td><%= link_to 'Destroy', mentee, :confirm => 'Are you sure?', :method => :delete %></td>
