--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,7 @@
     <!--<th>Password</th>-->
     <th>Phone</th>
     <th>Interests</th>
+    <th>Type</th>
     <th></th>
     <th></th>
     <th></th>
@@ -31,6 +32,7 @@
     <!--<td><%= user.password %></td>-->
     <td><%= user.phone %></td>
     <td><%= user.interests %></td>
+    <td><%= user.type %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
