--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -1,9 +1,16 @@
 <h1>Listing mentees</h1>
 
+
 <table>
   <tr>
     <th>ID</th>
-    <!--<th>Email</th>-->
+    <th>Name</th>
+    <th>Location</th>
+    <th>Current Position</th>
+    <th>School</th>
+    <th>Major</th>
+    <th>Total Years of Experience</th>
+    <th>Interests</th>
     <th></th>
     <th></th>
     <th></th>
@@ -12,14 +19,19 @@
 <% @mentees.each do |mentee| %>
   <tr>
     <td><%= mentee.id %></td>
-    <!--<td><%= mentee.user.email %></td>-->
+    <td><%= mentee.name %></td>
+    <td><%= mentee.location %></td>
+    <td><%= mentee.current_position %></td>
+    <td><%= mentee.school %></td>
+    <td><%= mentee.major %></td>
+    <td><%= mentee.total_years_experience %></td>
+    <td><%= mentee.interests %></td>
     <td><%= link_to 'Show', mentee %></td>
     <td><%= link_to 'Edit', edit_mentee_path(mentee) %></td>
     <td><%= link_to 'Destroy', mentee, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
-
 <br />
 
 <%= link_to 'New Mentee', new_mentee_path %>
