--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -1,8 +1,55 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>ID:</b>
-  <%= @mentee.id %>
+  <b>Name:</b>
+  <%= @mentee.name %>
+</p>
+
+<p>
+  <b>Location:</b>
+  <%= @mentee.location %>
+</p>
+
+<p>
+  <b>Current position:</b>
+  <%= @mentee.current_position %>
+</p>
+
+<p>
+  <b>School:</b>
+  <%= @mentee.school %>
+</p>
+
+<p>
+  <b>Major:</b>
+  <%= @mentee.major %>
+</p>
+
+<p>
+  <b>Total years experience:</b>
+  <%= @mentee.total_years_experience %>
+</p>
+
+<p>
+  <b>Email:</b>
+  <%= @mentee.email %>
+</p>
+
+<!--
+   <p>
+     <b>Password:</b>
+     <%= @mentee.password %>
+   </p>
+-->
+
+<p>
+  <b>Phone:</b>
+  <%= @mentee.phone %>
+</p>
+
+<p>
+  <b>Interests:</b>
+  <%= @mentee.interests %>
 </p>
 
 
