--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,8 +1,16 @@
 <h1>Listing mentors</h1>
 
+
 <table>
   <tr>
     <th>ID</th>
+    <th>First Name</th>
+    <th>Location</th>
+    <th>Current Position</th>
+    <th>School</th>
+    <th>Major</th>
+    <th>Total Years of Experience</th>
+    <th>Interests</th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,6 +19,13 @@
 <% @mentors.each do |mentor| %>
   <tr>
     <td><%= mentor.id %></td>
+    <td><%= mentor.name.split[0] %></td>
+    <td><%= mentor.location %></td>
+    <td><%= mentor.current_position %></td>
+    <td><%= mentor.school %></td>
+    <td><%= mentor.major %></td>
+    <td><%= mentor.total_years_experience %></td>
+    <td><%= mentor.interests %></td>
     <td><%= link_to 'Show', mentor %></td>
     <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td>
     <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td>
