--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,8 +1,55 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>ID:</b>
-  <%= @mentor.id %>
+  <b>Name:</b>
+  <%= @mentor.name %>
+</p>
+
+<p>
+  <b>Location:</b>
+  <%= @mentor.location %>
+</p>
+
+<p>
+  <b>Current position:</b>
+  <%= @mentor.current_position %>
+</p>
+
+<p>
+  <b>School:</b>
+  <%= @mentor.school %>
+</p>
+
+<p>
+  <b>Major:</b>
+  <%= @mentor.major %>
+</p>
+
+<p>
+  <b>Total years experience:</b>
+  <%= @mentor.total_years_experience %>
+</p>
+
+<p>
+  <b>Email:</b>
+  <%= @mentor.email %>
+</p>
+
+<!--
+   <p>
+     <b>Password:</b>
+     <%= @mentor.password %>
+   </p>
+-->
+
+<p>
+  <b>Phone:</b>
+  <%= @mentor.phone %>
+</p>
+
+<p>
+  <b>Interests:</b>
+  <%= @mentor.interests %>
 </p>
 
 
