--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :reason %>
   </div>
   <div class="field">
-    <%= f.label :estimatedLength %><br />
-    <%= f.text_field :estimatedLength %>
+    <%= f.label :estimated_length %><br />
+    <%= f.text_field :estimated_length %>
   </div>
   <div class="actions">
     <%= f.submit %>
