--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,25 +1,25 @@
-<h1>Listing requests</h1>
+<h1>Listing your mentorship requests</h1>
 
 <table>
   <tr>
+	<th>From</th>
     <th>Reason</th>
     <th>Estimatedlength</th>
-    <th></th>
     <th></th>
     <th></th>
   </tr>
 
 <% @requests.each do |request| %>
   <tr>
+    <td><%= link_to request.mentee.name, request.mentee %></td>
     <td><%= request.reason %></td>
-    <td><%= request.estimatedLength %></td>
-    <td><%= link_to 'Show', request %></td>
-    <td><%= link_to 'Edit', edit_request_path(request) %></td>
-    <td><%= link_to 'Destroy', request, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= request.estimated_length %></td>
+	<td><%= link_to 'Accept', request, :confirm => 'Are you sure?', :method => :put %></td>
+    <td><%= link_to 'Decline', request, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Request', new_request_path %>
+
