--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :ability %><br />
+    <%= f.text_field :ability %>
   </div>
   <div class="field">
     <%= f.label :lengthInYears %><br />
