--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Type:</b>
-  <%= @experience.type %>
+  <b>Ability:</b>
+  <%= @experience.ability %>
 </p>
 
 <p>
