--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :responseText %><br />
-    <%= f.text_field :responseText %>
+    <%= f.label :response_text %><br />
+    <%= f.text_field :response_text %>
   </div>
   <div class="actions">
     <%= f.submit %>
