--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Responsetext:</b>
-  <%= @response.responseText %>
+  <b>Response Text:</b>
+  <%= @response.response_text %>
 </p>
 
 
