--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Questiontext:</b>
-  <%= @question.questionText %>
+  <b>Question Text:</b>
+  <%= @question.question_text %>
 </p>
 
 
