--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -51,6 +51,9 @@
     <%= f.label :interests %><br />
     <%= f.text_area :interests %>
   </div>
+  <div class = "links">
+      <%= link_to 'Experiences', experiences_path %>
+  <div>
   <div class="actions">
     <%= f.submit %>
   </div>
