--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -10,10 +10,12 @@
   
   <tr>
     <% r = Response.new%>
+    
     <%= form_for(r) do |f| %>
+      <% r.question_id = question.id%>
       <div class="field">
         <%= f.label question.question_text %><br />
-        <%= f.text_field :response_text %>
+        <%= f.text_field :response_text %>        
       </div>
       <div class="actions">
         <%= f.submit %>
