--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :ability %><br />
-    <%= f.text_field :ability %>
+    <%= f.label :type %><br />
+    <%= f.text_field :type %>
   </div>
   <div class="field">
-    <%= f.label :lengthInYears %><br />
-    <%= f.text_field :lengthInYears %>
+    <%= f.label :length_in_years %><br />
+    <%= f.text_field :length_in_years %>
   </div>
   <div class="field">
-    <%= f.label :comfortLevel %><br />
-    <%= f.text_field :comfortLevel %>
+    <%= f.label :comfort_level %><br />
+    <%= f.text_field :comfort_level %>
   </div>
   <div class="actions">
     <%= f.submit %>
