--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   <li><a href="/mentors/<%= session[:id] %>/edit">Edit Profile</a></li>
   <li><a href="/mentor_profiles/update_availability">Update Availability</a></li>
   <li><a href="/requests/">Mentorship Requests</a></li>
+  <li><a href="/mentorships/">Mentorships</a></li>
   <% end %>
   <% if session[:usertype] == :mentee %>
   <li><a href="/mentees/<%= session[:id] %>">My Profile</a></li>
